# mp3_tagger

./: .gitignore  CMakeLists.txt  README.md  mp3_tagger.cbp  mp3_tagger.sln
include/: Parser.h  Tagger.h
mp3_tagger/: mp3_tagger.vcxproj  mp3_tagger.vcxproj.filters
mp3_tagger/include/: Parser.h  Tagger.h
mp3_tagger/src/: Parser.cpp  Tagger.cpp  main.cpp
src/: Parser.cpp  Tagger.cpp  main.cpp
