set(CMAKE_VERBOSE_MAKEFILE ON)
cmake_minimum_required(VERSION 3.12)
project(mp3_tagger)
set(CMAKE_CXX_STANDARD 11)
set(Taglib_DIR = /usr/local/Cellar/taglib)
find_package(Boost 1.65.1 COMPONENTS program_options filesystem REQUIRED)
set(CMAKE_CXX_FLAGS -ltag)

set(SOURCE_FILES src/main.cpp src/Parser.cpp include/Parser.h src/Tagger.cpp include/Tagger.h)
add_executable(mp3_tagger ${SOURCE_FILES})
target_link_libraries(mp3_tagger ${Boost_LIBRARIES})